--- a/PipeCreator/PipeCreator.vcxproj.filters
+++ b/PipeCreator/PipeCreator.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Matrix4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RadiusBezierPath.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BezierPath.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Vector4.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RadiusBezierPath.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
